[package]
name = "thiserror_lite"
version = "0.1.0"
authors = ["kangalioo <jannik.a.schaper@web.de>"]
edition = "2018"
description = "Almost drop-in replacement for thiserror, implemented using 100% declarative macros"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
